--- a/style/index.css
+++ b/style/index.css
@@ -51,7 +51,6 @@ body {
     margin: .5%; 
 }
 
-
 h1 {
     font-size: 60px; 
 }
@@ -65,12 +64,13 @@ p {
 }
 
 nav {
+
     display: flex;
     flex-direction: row;
     justify-content: center;
+    text-align: center; 
 
 }
-
 
 nav a {
 
@@ -80,7 +80,54 @@ nav a {
     text-decoration: none; 
     color: black;
     padding: 2%;
-    margin: 0% 10% 0% 10%; 
     text-align: center;
+}
+
+nav a:hover {
+    background: black; 
+    color: white; 
+}
+
+.btn-1 {
+    background: lightcoral; 
+}
+
+.btn-2 {
+    background: lightblue; 
+}
+
+.btn-3 {
+    background: lightgreen
+}
+
+.btn-4 {
+    background: limegreen
+}
+
+/* middle section */
+
+.hero-img {
+
+    background-image: url("https://images.unsplash.com/photo-1522778119026-d647f0596c20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+    height: 70vh;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-position: center top;
+
+    margin: 2% 0% 2% 0%;  
+
+}
+
+
+/* lower middle */
+
+#projects {
+    display: flex; 
+}
+
+#projects img {
+
+    
 }
 
