--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-/* border: 0; */  
+border: 0;  
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
@@ -23,8 +23,7 @@ vertical-align: baseline;
 
 
 * {
-    box-sizing: border-box;
-    border: 1px solid grey;  
+    box-sizing: border-box; 
     max-width: 100%;
 }
 
@@ -52,11 +51,11 @@ body {
 }
 
 h1 {
-    font-size: 60px; 
+    font-size: 6rem;  
 }
  
 h2 {
-    font-size: 40px; 
+    font-size: 6rem; 
 }
 
 p {
@@ -88,32 +87,15 @@ nav a:hover {
     color: white; 
 }
 
-.btn-1 {
-    background: lightcoral; 
-}
-
-.btn-2 {
-    background: lightblue; 
-}
-
-.btn-3 {
-    background: lightgreen
-}
-
-.btn-4 {
-    background: limegreen
-}
-
 /* middle section */
 
 .hero-img {
 
-    background-image: url("https://images.unsplash.com/photo-1522778119026-d647f0596c20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+    background-image: url("https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
     height: 70vh;
     background-size: cover; 
     background-repeat: no-repeat; 
-    background-attachment: fixed;
-    background-position: center top;
+    background-position: 30% 70%;
 
     margin: 2% 0% 2% 0%;  
 
@@ -122,12 +104,28 @@ nav a:hover {
 
 /* lower middle */
 
-#projects {
-    display: flex; 
+.middle-bottom {
+    display:flex; 
+    justify-content: flex-start; 
 }
 
-#projects img {
 
-    
+.middle-bottom img {
+    width: 15%; 
+    margin: .5%;
+    border: 2px solid black; 
+}
+
+.paragraph {
+    display: flex; 
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.paragraph p {
+    width: 40%; 
+    border: 2px solid black; 
+    margin-bottom: 14%;
 }
 
