--- a/style/index.css
+++ b/style/index.css
@@ -32,6 +32,7 @@ html {
 }
 
 body {
+
     font-size: 2.3rem;
     line-height: 1.5;
     font-family: 'Concert One', cursive;
@@ -51,7 +52,7 @@ body {
 }
 
 h1 {
-    font-size: 6rem;  
+    font-size: 8rem;  
 }
  
 h2 {
@@ -62,7 +63,7 @@ p {
     font-family: 'PT Sans', sans-serif;
 }
 
-nav {
+nav.a {
 
     display: flex;
     flex-direction: row;
@@ -97,7 +98,7 @@ nav a:hover {
     background-repeat: no-repeat; 
     background-position: 30% 70%;
 
-    margin: 2% 0% 2% 0%;  
+    margin: 1% 0% 1% 0%;  
 
 }
 
@@ -107,6 +108,7 @@ nav a:hover {
 .middle-bottom {
     display:flex; 
     justify-content: flex-start; 
+    margin-left: -.5%;
 }
 
 
@@ -121,6 +123,7 @@ nav a:hover {
     text-align: center;
     align-items: center;
     justify-content: center;
+
 }
 
 .paragraph p {
@@ -129,3 +132,29 @@ nav a:hover {
     margin-bottom: 14%;
 }
 
+/* footer */
+
+footer {
+    padding: 4%; 
+    background: gray; 
+    display: flex; 
+    justify-content: center;
+}
+
+
+footer button {
+
+    width: 9%; 
+    border: 3px solid black; 
+    padding: 1.4rem;
+    font-size: 2.1rem;
+    font-family: 'Concert One', cursive;
+
+}
+
+footer button:hover {
+
+    background: black; 
+    color: white; 
+
+}
