changed the size of my p to look smaller and better

--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/* border: 0;   */
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
@@ -25,6 +25,7 @@ vertical-align: baseline;
 * {
     box-sizing: border-box; 
     max-width: 100%;
+    border: 2px solid gray; 
 }
 
 html {
@@ -62,6 +63,7 @@ h2 {
 p {
     font-family: 'PT Sans', sans-serif;
     text-align: center; 
+    width: 85%; 
 }
 
 nav.a {
